2000-10-28  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: add '&' when calling &usage()
	or &dump_size().

2000-10-28  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	reported by The Hermit Hacker <scrappy@hub.org>

	* changer-src/chg-chio.pl.in: remove unused $libexecdir.

2000-10-28  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	reported by The Hermit Hacker <scrappy@hub.org>

	* changer-src/chg-chio.pl.in: remove comma after LOG,
	typo: r should be 0.

2000-10-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* docs/INDEXING: doc updated.

2000-10-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* changer-src/scsi-defs.h: prototype SCSI_Inquiry, PrintInquiry, 
	DecodeSCSI, ChangerReplay, BarCode and MapBarCode.
	* changer-src/scsi-linux.c: fix compiler warning.
	* changer-src/scsi-changer-driver.c: fix compiler warning.

2000-10-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* changer-src/chg-scsi.c: remove rcsid.
	* changer-src/scsi-aix.c: remove rcsid, add amanda Copyright.
	* changer-src/scsi-bsd.c: remove rcsid, add amanda Copyright.
	* changer-src/scsi-changer-driver.c: remove rcsid, add amanda Copyright.
	* changer-src/scsi-defs.h: add amanda Copyright.
	* changer-src/scsi-hpux.c: remove rcsid.
	* changer-src/scsi-hpux_new.c: remove rcsid, add amanda Copyright.
	* changer-src/scsi-irix.c: remove rcsid, add amanda Copyright.
	* changer-src/scsi-linux.c: remove rcsid, add amanda Copyright.
	* changer-src/scsi-solaris.c: remove rcsid, add amanda Copyright.

2000-10-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* AUTHORS: add Thomas Hepper.

2000-10-14  Thomas Hepper <th@ant.han.de>

	* changer-src/scsi-changer-driver.c: Added support for the TreeFrog
	library (barcode support), fixed some signal 11 problems in the
	output of chg-scsi -status
	Removed unused variables
	* changer-src/chg-scsi.c: same
	* changer-src/scsi-defs.h: same
